doc: add petri net image, doc without experiments conclusion and experiments
Signed-off-by: Lukáš Drahník <ldrahnik@gmail.com>

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,8 +1,8 @@
 doc.dvi: manual.tex Makefile local.bib
-	pdftex $<
+	latex $<
 	bibtex manual
-	pdftex $<
-	pdftex $<
+	latex $<
+	latex $<
 
 %.ps: %.dvi
 	dvips -f -t a4 $< > $@
